# HearSay

./: .gitignore  README.md  WebScrapper.drawio  coinchange.drawio  pyproject.toml
Backend/Database/queries/: queries.sql
Backend/Database/schema/: keywords.sql
Database/: README.md  schema.sql
Database/schemas/: schema.sql
DesignDocuments/: V0.1.0.drawio
Display/display-nextjs/: README.md  package-lock.json  package.json
Display/display-nextjs/src/app/: layout.js  main.css  mindmap.js  page.js
Public/: .gitignore
Public/backend/pocketbase/pb_hooks/: import_csv.pb.js
Public/backend/pocketbase/pb_migrations/: 1731750711_created_Reviews.js  1731751025_created_labels.js  1731751049_updated_labels.js  1731752275_created_Reviews.js  1731754196_updated_Reviews.js  (+14 more)
Public/backend/reviews/: commands.sql  schema.sql
Public/frontend/: middleware.ts  package-lock.json  package.json
Public/frontend/app/: globals.css  page.tsx
Public/frontend/components/: AuthForm.tsx
Public/frontend/types/: main.ts
Services/WorkerQueueLayer/: README.md
Services/YelpScrapper/: README.md  __main__.py
Services/YelpScrapper/UploadResults/: README.md  UploadResults.go  go.mod
Services/YelpScrapper/tests/: test_csv.py
Simple/: .env  README.md  __main__.py  config.json  phi3.5_sentiment_finetune.ipynb  pyproject.toml
Simple/Aggregator/: aggregator.py
Simple/FastAPI/: __main__.py
Simple/FastAPI/models/: __main__.py
Simple/FastAPI/types/: t_api.py
Simple/FastAPI/utils/: tokens.py
Simple/Processing/: string_preprocessing.py
Simple/Tests/: preprocessing_tests.py
Simple/constants/: constants.py
Simple/data/: README.md  download_data.bash  parser_factory.py  parsers.py
Simple/data/output/: README.md
Simple/data/parser/: ingestParser.py
Simple/schema/: keywords.sql
Simple/src/client/: clientState.py
Simple/src/processing/: string_preprocessing.py
Simple/src/types/: API.py  models.py  reviews.py
Simple/src/types/client/: ClientState.py  clientstate.py
Simple/src/utils/: aggregator.py  api_interface.py
Simple/tests/: preprocessing_test.py
Simple/types/: API.py  DEPRECATED_yelpTypes.py  __main__.py  models.py  reviews.py
Simple/utils/: aggregator.py  api_interface.py  display.py
Transformer/: README.md
Transformer/PyTorch/: README.md  __init__.py  __main__.py  pyproject.toml
Transformer/Vespera/: README.md  __init__.py  __main__.py  pyproject.toml
WorkerQueueLayer/: README.md
WorkerQueueLayer/RabbitMQ/: go.mod  main.go
WorkerQueueLayer/RabbitMQ/conf/: rabbitmq.conf
WorkerQueueLayer/RabbitMQ/reciever/: go.mod
WorkerQueueLayer/RabbitMQ/worker/: go.mod
YelpScrapper/: .env  README.md  pyproject.toml
YelpScrapper/data/: business_test.csv  reviews_test.csv
YelpScrapper/lib/Scrapper/: README.md
YelpScrapper/lib/Scrapper/yelp/: review.py  scrapper.py
YelpScrapper/utils/: utils.py
(+13 files in other folders)
