[tool.poetry]
name = "simple"
version = "0.1.0"
description = ""
authors = ["StickOnAStick <nndimidik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
anthropic = "^0.34.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
