[tool.poetry]
name = "Simple"
version = "0.1.0"
description = ""
authors = ["StickOnAStick <nndimidik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
anthropic = "^0.34.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic = "^2.9.2"
openai = "^1.51.0"
pendulum = "^3.0.0"
tiktoken = "^0.7.0"
tokenizers = "^0.20.0"
scikit-learn = "^1.5.2"
jinja2 = "^3.1.4"
pybind11 = "^2.13.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
