[tool.poetry]
name = "yelpscrapper-selenium"
version = "0.1.0"
description = "Yelp WebScrapper using Selenium"
authors = ["Nicholas Dimidik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
undetected-chromedriver = "^3.5.5"
loguru = "^0.7.2"
pendulum = "^3.0.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
