[tool.poetry]
name = "yelpscrapper-selenium"
version = "0.1.0"
description = "Yelp WebScrapper using Selenium"
authors = ["Nicholas Dimidik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
undetected-chromedriver = "^3.5.5"
loguru = "^0.7.2"
pendulum = "^3.0.0"
pydantic = "^2.9.2"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
selenium-wire = "^5.1.0"
blinker = "1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
