[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["StickOnAStick <nndimidik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
transformers = "^4.45.1"
datasets = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
