[tool.poetry]
name = "vespera"
version = "0.1.0"
description = "Vespera, goddess of gossip kinda. Custom transformer model to extract user sentiment across large datasets."
authors = ["StickOnAStick <nndimidik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
